# Game_SFML

./: .gitignore  CMakeLists.txt  README.md  main.cpp
inc/: Drawer.hpp  Func.h
src/: Drawer.cpp  Func.cpp
